css/style.css
body {
  font-family: 'Open Sans', sans-serif;
  background-color: #f2f2f2;
  font-size: 14px;
  color: #222;
  font-weight: normal;
  letter-spacing: 0.03em;
}
a {
  color: #7447ae;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
}
section {
  width: 100%;
}
a:hover, a:focus, a:active {
  text-decoration: none;
  outline: none;
}
ul {
  margin: 0;
  padding: 0;
}
ul li {
  list-style: none;
}
img {
  max-width: 100%;
}
.purple {
  color: #7447ae;
}
.pink {
  color: #ff2a75;
}
.blue {
  color: #37a7ff;
}

/***********************/
/*FOR ANIMATION CONTENT-purvesh:) Include class animate-bottom*/
/***********************/
/*.animate-bottom {
  position: relative;
  -webkit-animation-name: animatetop;
  -webkit-animation-duration: 1s;
  animation-name: animatetop;
  animation-duration: 1s
}

@-webkit-keyframes animatetop {
  from { top:-100px; opacity:0 } 
  to { top:0px; opacity:1 }
}

@keyframes animatetop { 
  from{ top:-100px; opacity:0 } 
  to{ top:0; opacity:1 }
} */


/* Hero Section */
header.hero {
  background: url(../img/geeks.jpg)no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  color: #fff;
  padding-bottom: 80px;
}

header.hero .hero-text {
  margin-top: 20%;
  margin-bottom: 20%;
}
header.hero .row {
  position: relative;
}
a.menu {
  position: absolute;
  right: 0;
  top: 3em;
}
a.menu img {
  max-width: 40px;
}
a.menu:hover {
  transform: translateX(-5px);
  -webkit-transform: translateX(-5px);
}
header.hero h1 {
  font-family: 'Montserrat', sans-serif;
  font-size: 4.5em;
  font-weight: 600;
  line-height: 1.4em;
}
header.hero h1 span,
header.hero h3 {
  font-weight: 300;
}
header.hero .btn {
  margin: 3em 0;
}

ul.social-links li {
  display: inline-block;
}
ul.social-links li a {
  padding: 5px;
  opacity: 0.6;
}
ul.social-links li.label {
  font-size: 20px;
  opacity: 0.6;
  font-weight: 400;
}
ul.social-links li a:hover {
  opacity: 1;
}
ul.social-links li a img {
  max-height: 30px;
}


/* Case study */
.about-me .col-md-12 {
  transform: translateY(-80px);
  -webkit-transform: translateY(-80px);
  padding: 5em 3em;
  background-color: #fff;
  box-shadow: 0 0 100px rgba(0, 0, 0, 0.15);
}
.about{
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  font-size: 25px;
  color: #4e4c58;
}
h4.sub-heading {
  text-transform: uppercase;
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  color: #4e4c58;
}
h1.heading {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  color: #4e4c58;
  font-size: 3em;
  position: relative;
  padding-bottom: 10px;
}
h1.heading span {
  font-weight: 600;
}
h1.heading:after {
  content: '';
  display: block;
  position: absolute;
  bottom: -10px;
  left: 0;
  height: 3px;
  width: 100px;
}
h1.heading.purple:after {
  background-color: #7447ae;
}
h1.heading.pink:after {
  background-color: #ff2a75;
}


.swiper-container {
  width: 100%;
  height: 100%;
  padding: 4em 1em;
}
.swiper-slide {
  font-size: 18px;
  background: #fff;
}

.client-box {
  background-color: #fff;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.03);
  padding: 3.5em 2em;
  border-radius: 5px;
  border: 1px solid #eee;
  text-align: center;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
}
.client-box .client-logo {
  max-height: 120px;
}
.client-box h3.title {
  color: #4e4c58;
  margin-bottom: 2em;
}
.client-box p.tag {
  color: #7447ae;
  font-family: 'Montserrat', sans-serif;
  margin-bottom: 1em;
}
.client-box a {
  color: #333;
  font-style: italic;
  opacity: 0.5;
}
.client-box.swiper-slide-next {
  -ms-transform: scale(1.15); /* IE 9 */
  -webkit-transform: scale(1.15); /* Safari */
  transform: scale(1.15);
  box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
  z-index: 2;
}
.swiper-button-next, .swiper-button-prev {
  width: 80px;
  height: 80px;
  background-size: 80px 80px;
  box-shadow: 0 0 40px rgba(0, 0, 0, 0.05);
  border-radius: 5em;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
}
.swiper-button-next:hover,
.swiper-button-prev:hover {
  box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
}
.swiper-button-next, .swiper-container-rtl .swiper-button-prev {
  background-image: url(../img/arrow-right.png);
  right: -40px;
}
.swiper-button-prev, .swiper-container-rtl .swiper-button-next {
  background-image: url(../img/arrow-left.png);
  left: -40px;
}


/* Testimonial */
.testimonial-box {
  padding: 2em;
  color: #fff;
  border-radius: 5px;
  font-weight: 300;
  min-height: 400px;
}
.testimonial-box h1 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  margin-top: 0;
  margin-bottom: 1em;
}
.testimonial-box h3.title{
  color: #4e4c58;
}
.testimonial-box p.name {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  font-size: 1.2em;
  margin-bottom: 0;
  /*color: color: #4e4c58;*/ /* color for bottom right source testimonial*/
}
.testimonial-box p.designation {
  font-family: 'Montserrat', sans-serif;
  margin-bottom: 0;
}
.testimonial-box.yellow {
  background-color: #ffbe61;
}
.testimonial-box.purple {
  background-color: #7b32d5;
}
.testimonial-box.blue {
  background-color: #37a7ff;
}
.testimonial-box.pink {
  background-color: #ff2a75;
}


/* Statistics */
.stats {
  margin: 4em 0;
}
.stat-box {
  padding: 4em;
  margin-top: 4em;
  margin-bottom: 4em;
}
.stat-box h1 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 600;
  font-size: 5.6em;
}
.stat-box h3 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 600;
  color: #4e4c58;
  font-size: 2em;
}


/* Contact Banner */
.contact-banner {
  background: url(../img/bg-pat.png) #664fee repeat;
  color: #fff;
  padding: 6em;
}
.contact-banner h1 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  font-size: 3em;
  margin-top: 0;
  margin-bottom: 1em;
}


/* Footer */
.footer {
  background-color: #37324b;
  padding: 5em;
}
.footer h1 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 600;
  font-size: 3em;
  color: #a3a1ac;
  margin-bottom: 2em;
}
.footer h1 span {
  color: #fff;
  font-weight: 300;
}
.footer h1:after {
  content: '';
  width: 80px;
  height: 4px;
  background-color: #37a7ff;
  display: block;
  position: absolute;
  left: 50%;
  transform: translate(-40px, 10px);
}
.footer ul.social-links li a {
  padding-left: 12px;
  padding-right: 12px;
}
.footer ul.social-links li a img {
  max-height: 40px;
}

/* Sub-footer */
.sub-footer {
  background-color: #322e45;
  padding: 2em;
  color: #a3a1ac;
  font-family: 'Montserrat', sans-serif;
  font-weight: 300;
}
.sub-footer p {
  margin: 0;
  font-size: 1.2em;
}
.sub-footer p a {
  color: #fff;
}
.sub-footer p a:hover {
  opacity: 0.8;
}


/* Main navigation */
nav {
  height: 40px;
  width: 100%;
  position: absolute;
  right: 0;
  top: 3em;
  cursor: pointer;
  transition: .25s ease-in-out;
}
#menu-toggle {
  width: 40px;
  clear: both;
  float: right;
}
#menu-toggle span.line {
  display: block;
  height: 4px;
  width: 40px;
  background-color: #fff;
  transition: .25s ease-in-out;
}
#menu-toggle .hamburger span.line {
  margin-bottom: 0.45em;
  clear: both;
  float: right;
}
#menu-toggle .hamburger span.line:nth-child(1) {
  width: 30px;
  transition-delay: .25s;
}
#menu-toggle .hamburger span.line:nth-child(2) {
  transition-delay: .325s;
}
#menu-toggle .hamburger span.line:nth-child(3) {
  width: 20px;
  transition-delay: .475s;
}

#menu-toggle .cross span.line {
  width: 0px;
  position: absolute;
  top: 10px;
  right: 0;
}
#menu-toggle .cross span.line:nth-child(1) {
  transform: rotate(45deg);
  transition-delay: .0s;
}
#menu-toggle .cross span.line:nth-child(2) {
  transform: rotate(-45deg);
  transition-delay: .25s;
}

#menu-toggle.open .hamburger span.line {
  width: 0px;
}
#menu-toggle.open #hamburger span:nth-child(1) {
  transition-delay: 0s;
}
#menu-toggle.open #hamburger span:nth-child(2) {
  transition-delay: .125s;
}
#menu-toggle.open #hamburger span:nth-child(3) {
  transition-delay: .25s;
}

#menu-toggle.open .cross span.line:nth-child(1) {
  width: 40px;
  transition-delay: 1s;
}
#menu-toggle.open .cross span.line:nth-child(2) {
  width: 40px;
  transition-delay: 1.25s;
}

ul.main-nav {
  padding-right: 20px;
  display: flex;
  justify-content: flex-end;
  opacity: 0;
  visibility: hidden;
  transition: .25s all;
}
ul.main-nav li {
  display: inline-block;
}
ul.main-nav li a {
  color: #fff;
  font-family: 'Montserrat', sans-serif;
  font-size: 14px;
  text-transform: uppercase;
  padding: 5px 15px;
}
ul.main-nav li a:hover {
  color: #ffbe61;
}
ul.main-nav.show-it {
  opacity: 1;
  visibility: visible;
  transition-delay: .25s;
}



/* Get in touch details */

#contact-form{
  max-width: 500px;
  margin: 0 auto;

}

#contact-form input,#contact-form textarea{display:block;width:100%;padding:10px;border-radius:4px;border:none;margin-bottom:10px;background:#1d6fa5;color:#fff;transition:.5s ease all}
#contact-form input::-webkit-input-placeholder,
#contact-form textarea::-webkit-input-placeholder{color:#fff}
#contact-form input:-moz-placeholder,
#contact-form textarea:-moz-placeholder{color:#fff;opacity:1}
#contact-form input::-moz-placeholder,
#contact-form textarea::-moz-placeholder{color:#fff;opacity:1}
#contact-form input:-ms-input-placeholder,
#contact-form textarea:-ms-input-placeholder{color:#fff}
#contact-form input:focus,
#contact-form textarea:focus{outline:none;background:#16527a}
#contact-form textarea{height:150px;resize:none}
#contact-form button{display:block;width:100%;background:#fff;border-radius:4px;padding:5px 10px;border:none;color:#3498db;font-weight:700;box-shadow:0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);transition:.5s ease all}
#contact-form button:hover{box-shadow:0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23)}







/* Let's optimise it for mobile devices */

@media all and (max-width: 720px){
  .btn-lg {
    padding: .8em 3em;
    font-size: .8em;
  }
  .about{
    font-size: 20px;
    text-align: justify;

  }
  h1.heading {
    font-size: 2em;
  }
  header.hero {
    text-align: center;
    padding-bottom: 0;
  }
  header.hero h1 {
    font-size: 2em;
    margin-top: 1.5em;
  }
  header.hero h3 {
    font-size: 1.2em;
    line-height: 1.6em;
  }
  ul.social-links li.label {
    display: block;
    font-size: 16px;
    margin-bottom: 1em;
  }
  ul.social-links li a {
    opacity: 1;
  }
  .social-links{
   margin-bottom: 7em; 
  }
  .testimonial {
    padding-top: 3rem;
  }
  .case-study .col-md-12 {
    padding-left: 15px;
    padding-right: 15px;
  }
  .case-study .col-md-12 {
    transform: translateY(0px);
    -webkit-transform: translateY(0px);
  }
  /*Swiper classes*/
  .client-box.swiper-slide-next {
    -ms-transform: scale(1);
    -webkit-transform: scale(1);
    transform: scale(1);
    box-shadow: none;
  }
  .swiper-button-prev,
  .swiper-button-next {
    display: none;
  }
  .swiper-container {
    padding: 4em 0em;
  }
  .client-box {
    padding: 1em;
    text-align: center;
  }
  .stat-box {
    padding: 1em;
    margin-top: 1em;
    margin-bottom: 1em;
  }
  .stat-box h1 {
    font-size: 3.6em;
  }
  .stat-box h3 {
    font-size: 1.4em;
  }
  .contact-banner {
    padding: 2em;
  }
  .contact-banner h1 {
    font-size: 2em;
  }
  .footer {
    padding: 1em 0em;
  }

  #menu-toggle{
    margin-right: 10px;
  }
 
}

/*random quote*/
 .carousel-control.right, .carousel-control.left {
      background-image: none;
      color: #f4511e;
  }
  .carousel-indicators li {
      border-color: #f4511e;
  }
  .carousel-indicators li.active {
      background-color: #f4511e;
  }
#quotes{
 box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
}

/*block quote*/

.quotation-mark{
    
    margin-top: -20px;
    margin-bottom: -50px;
    font-weight: bold;
    font-size:100px;
    color:#ff2a75;
    font-family: "Times New Roman", Georgia, Serif;
    
}

